# zia

./: .gitignore  CMakeLists.txt  Logs  Makefile  README.MD  README.md  api  example.json  exemple.php  request_example.txt  zia.docx
docs/norme/: norme.txt
example/: example.html  example.json  exemple.php
include/: daemon.hpp
include/Error/: Error.hpp
include/NetStack/: Balancer.hpp  Request.hpp  Worker.hpp
include/Network/: Balancer.hpp  Client.hpp  Network.hpp  Request.hpp  Worker.hpp  ziainclude.hpp
includes/: Utils.hpp
includes/api/: Constant.hpp  Error.hpp  HtmlManager.hpp  HttpInterpreter.hpp  HttpParser.hpp  ModuleLauncher.hpp  ModuleLoader.hpp  ModuleManager.hpp  Network.hpp  conf.h  module.h
includes/config_manager/: ConfigManager.hpp
includes/module_manager/: ModuleManager.hpp
includes/modules/: LogModule.hpp  SSLModule.hpp  TestModule.hpp  getpost.h  getpost.hpp  phpcpp.hpp
includes/server/: Constant.hpp  daemon.hpp  logger.hpp  main.hpp
linux/: Makefile
linux/conf/: zia.json
linux/example/: example.html  example.json
linux/package/: PKGBUILD
linux/sources/: main.cpp
norme/include/: Example.hpp
norme/sources/: Example.cpp
package/: Makefile  PKGBUILD  README.md  zia-0.0.1-1-any.pkg.tar.xz  zia.db  zia.files  zia.service
package/src/: zia.8  zia.service
request_examples/: GET_404  GET_exampleHtml  GET_root  POST_exampleHtml
sources/: daemon.cpp
sources/NetStack/: Balancer.cpp  Network.cpp  Worker.cpp  main.cpp
srcs/: ConfigManager.cpp  ModuleManager.cpp  main.cpp
templates/: view_dir_head.html
(+84 files in other folders)
